# random-word-endpoint

./: Cargo.toml  Dockerfile  docker-compose.yml
src/: main.rs
